--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1 id="title" class="text-center">TO DO LIST</h1>
-    <div class="w-75 m-auto container text-center">
+    <h1 id="title" class="text-center mt-5 ">TO DO LIST</h1>
+    <div class="w-75 m-auto container text-center mt-2 shadow-sm p-5">
         <div class="input-group flex-nowrap">
-            <input type="text" class="form-control" placeholder="Input Items" aria-label="Username" aria-describedby="addon-wrapping">
-            <button class="btn btn-danger" id="addon-wrapping">ADD ITEMS</button>
+            <input id="input-field" type="text" class="form-control" placeholder="Input Items" aria-label="Username" aria-describedby="addon-wrapping">
+            <button id="add-btn" class="btn btn-danger" id="addon-wrapping">ADD ITEMS</button>
         </div>
+        <table class="table table-striped my-5">
+            <thead>
+              <tr>
+                <th scope="col">Number</th>
+                <th scope="col">Item</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody id="table-body">
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+              </tr>
+            </tbody>
+          </table>
     </div>
     <script src="script.js"></script>
 </body>
