delete and done btn functonality , resel all btn add and null input condition add

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </thead>
             <tbody id="table-body">
             </tbody>
-          </table>
+        </table>
+        <button id="reset-btn" class="btn btn-warning fw-bold px-3">Reset All</button>
     </div>
     <script src="script.js"></script>
 </body>
